# AnkiCard4Aisha-backend

./: .env  .env.example  migrate_card_reviews.py  migrate_folders.py  migrate_folders_nesting.py  migrate_reviews.py  pyproject.toml  requirements.txt  test_study_logic.py  test_study_math.py
app/: __init__.py  config.py  database.py  main.py
app/auth/: routes.py  schemas.py  utils.py
app/cards/: __init__.py  import_services.py  models.py  routes.py  schemas.py  services.py  study_service.py
app/pdf/: extractor.py
app/users/: models.py
